# SREProjects

./: .gitignore  CMakeLists.txt
Exercise10/: BirdMovementComponent.cpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  MovingPlatformComponent.cpp
Exercise2/: CMakeLists.txt
Exercise2/Exercise1-HelloPreprocessor/: main.cpp
Exercise2/Exercise2-SquaredSecrets/: main.cpp
Exercise2/Exercise3-MineSweeper/: MineSweeper.cpp  MineSweeper.hpp  main.cpp  main_gui.cpp  minesweeper.json
Exercise3/: CMakeLists.txt  Level.cpp  Snake.cpp  Snake.hpp  SnakeBody.cpp  SnakeBody.hpp  SnakeGUI.cpp
Exercise4/: AsteroidsGame.cpp  AsteroidsGame.hpp  Collidable.cpp  Collidable.hpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  Laser.cpp  Laser.hpp  Meteor.cpp  Meteor.hpp  MeteorBig.cpp  MeteorBig.hpp  MeteorMedium.cpp  MeteorMedium.hpp  MeteorSmall.cpp  MeteorSmall.hpp  SpaceShip.cpp  SpaceShip.hpp  asteroids.json
Exercise6/: CMakeLists.txt  FirstPersonController.cpp  FirstPersonController.hpp  Wolf3D.cpp  Wolf3D.hpp  WorldMap.cpp  level1.json
Exercise8/: BirdController.cpp  BirdController.hpp  BirdGame.cpp  BirdGame.hpp  Component.cpp  Component.hpp  GameObject.hpp
project/: box2d-example.cpp
project/platformer/: CharacterController.cpp
submodules/SimpleRenderEngine/examples/: 18_spinning-textured-cube.cpp  CMakeLists.txt
